used JPA methods to sort.Changes in StudentServiceImpl and StudentRepository. Formatted TeacherService